--- a/orchard-translator.html
+++ b/orchard-translator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>ORCHARD:1-1 Translator (improved)</title>
+<title>ORCHARD:1-1 Translator</title>
 <style>
   body { font-family: monospace; background:#111; color:#eee; padding:20px; }
   textarea { width:100%; height:140px; background:#000; color:#0f0; padding:10px; box-sizing:border-box; }
